--- a/style.css
+++ b/style.css
@@ -511,41 +511,7 @@ margin-top: 30px;
   margin-top: 70px;
   position: relative;
 } */
- .video-tour-section {
-  position: relative;
-  width: 100%;
-  /* max-width: 900px; */
-  margin: auto;
-}
+ /* .video-tour-section {
 
-.video-tour-section iframe {
-  display: block;
-  width: 100%;
-  height: 500px;
-  border-radius: 10px;
-}
-
-/* Overlay on top of iframe */
-.video-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  background: rgba(0,0,0,0.5); /* transparent black bg */
-  color: #fff;
-  text-align: center;
-  border-radius: 10px;
-}
-
-.video-overlay img {
-  width: 100%;
-  margin-bottom: 15px;
-}
+} */
 
