--- a/style.css
+++ b/style.css
@@ -204,10 +204,11 @@ color: #687799;
 .company{
   color: #ff5a3c;
   padding: 10px;
+  margin-top: 70px;
   border: none;
   background-color: #FEEFEB;
   font-weight: 600;
-  width: 170px;
+  width: 180px;
 }
 /* about-section */
 .about-section{
@@ -241,14 +242,15 @@ color: #687799;
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   padding-block: 0.5rem;
-  padding-inline: 1.25rem;
+  /* padding-inline: 1.25rem; */
   background-color:#ff5a3c;
   border-radius: 9999px;
-  display: flex;
+  display: inline-flex;
+  gap: 15px;
   align-items: center;
   justify-content: center;
   color: #ffff;
-  gap: 10px;
+  
   font-weight: bold;
   border: 3px solid #ffffff4d;
   outline: none;
@@ -256,12 +258,13 @@ color: #687799;
   font-size: 15px;
   cursor: pointer;
   width: 218px;
-  animation-name: "wipe-in-down";
+  padding: 0.5rem 1.5rem;
+ 
 }
   
 .icon {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -412,8 +415,10 @@ margin-left: 20px;
 }
 .cardswaladiv{
   display: flex;
+  gap: 20px;
   margin-top: 40px;
 }
+
 .chooseUS{
   margin-top: 15%;
   background-color: #F0FCFA;
@@ -504,14 +509,372 @@ margin-top: 30px;
 .role2{
   height: 97px;
 }
-/* .video-tour-section{
+.videotour{
   width: 100%;
   height: 500px;
-  border: 1px solid black;
   margin-top: 70px;
+ background: 
+    linear-gradient(rgba(65, 77, 114, 0.571), rgba(81, 112, 156, 0.561)), url("./images/videoTourThumb1_1.jpg.jpeg");
+  background-size: cover;
+}
+.again{
+  color: white;
+  margin-top: 10px;
+}
+/* :root {
+  --main: #f857a6;
+  --second: #ff5858;
+} */
+
+/* body {
+  background: linear-gradient(to right, var(--main), var(--second));
+} */
+
+/* Animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes triangleStroke {
+  from {
+    stroke-dashoffset: 90;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes smallScale {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
+.playbutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  margin-top: -200px;
+}
+
+.button {
+  display: inline-block;
   position: relative;
-} */
- /* .video-tour-section {
+}
 
-} */
+.button.is-play {
+  background-color:#ff5a2c;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
 
+.button.is-play .button-outer-circle {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.button.is-play .button-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  color: white;
+  transform: translate(-50%, -50%);
+}
+
+.button.is-play .button-icon .triangle {
+  animation: fadeIn 7s ease;
+}
+
+.button.is-play .button-icon .path {
+  stroke-dasharray: 90;
+  stroke-dashoffset: 0;
+  animation: triangleStroke 3s ease;
+  color: white;
+}
+
+.has-scale-animation {
+  animation: smallScale 3s infinite;
+}
+
+.has-delay-short {
+  animation-delay: 0.5s;
+}
+.oursuccess{
+display: flex;
+}
+.side2{
+  display: flex;
+}
+/* .side2 p{
+  font-size: 16px;
+  margin-left: 40px;
+  height: 900px;
+  border: 1px solid black;
+} */
+.portfolio{
+  width: 120px;
+  margin-left: 40px;
+}
+.heading{
+  margin-left: 40px;
+}
+.cardsSection{
+ width:546px;
+height: 1011px;
+margin-top: 12%;
+display: flex;
+flex-direction: column;
+gap: 10px;
+}
+.doosriside{
+ width: 546px;
+ height: 278px;
+ background-image: url(./images/portfolioThumb2_1.jpg.jpeg);
+ background-size: cover;
+}
+.do{
+  background-image: url(./images/portfolioThumb2_2.jpg.jpeg);
+  background-size: cover;
+}
+.teen{
+  background-image: url(./images/portfolioThumb2_3.jpg.jpeg);
+  background-size: cover;
+}
+.brandingwala{
+  background-color: white;
+  width: 340px;
+  height: 125px;
+  border-radius: 6px;
+  margin-top: 130px;
+  margin-left: 20px;
+}
+.clients{
+  width: 100%;
+  height: 800px;
+  background-color: #FEF1EE;
+}
+.faqdiv{
+  margin-top: -40px;
+  background-color: white;
+}
+.faqbtn{
+  padding: 5px;
+  height: 50px;
+}
+.faqside{
+  margin-top: -50px;
+}
+.faqpara{
+  font-size: 16px;
+  font-weight: 300;
+  width: 437px;
+  height: 84px;
+  /* margin-left: -10px; */
+  margin: 20px;
+}
+.faqcontact{
+display: flex;
+gap: 10px;
+width: 212px;
+height: 56px;
+justify-content: center;
+align-items: center;
+}
+.faqgrade{
+  margin-top: 50px;
+}
+.faqnumber{
+color: black;
+font-size: 16px;
+font-family: sans-serif;
+}
+
+
+
+  .testimonial-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 30px;
+      width: 500px;
+      height: 300px;
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      position: relative;
+    }
+
+    .testimonial-card img {
+      position: relative;
+      position: absolute;
+      margin-left: -50px;
+      margin-top: -10px;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .testimonial-content {
+      margin-left: 50px;
+      margin-top: 50px;
+      flex: 1;
+
+    }
+
+    .testimonial-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .testimonial-header .icon {
+      color: #ff5a3c;
+      font-size: 24px;
+    }
+
+    .testimonial-header .stars {
+      color: #ff5a3c;
+      font-size: 18px;
+    }
+
+    .testimonial-content p {
+      font-size: 16px;
+      color: #555;
+      line-height: 1.6;
+      margin-bottom: 15px;
+    }
+
+    .testimonial-content strong {
+      font-weight: bold;
+      color: #000;
+    }
+
+    .testimonial-content span {
+      color: #555;
+    }
+    .testimonialsdiv{
+      display: flex;
+      gap: 40px;
+    }
+    .accordiondiv{
+      width: 50%;
+      margin-top: 170px;
+    }
+    .item{
+      border: 1px solid black;
+    }
+    .footerdiv{
+      width: 100%;
+      height: 900px;
+      background:  linear-gradient(rgba(18, 29, 108, 0.747), rgba(18, 29, 108, 0.995)), url("./images/bg-1.jpg.jpeg");
+         background-size: cover;
+       background-position: center;
+       display: flex;
+       flex-direction: column;
+       gap: 70px;
+    }
+    .footerbtn{
+      font-weight: 700;
+      width: 20%;
+    }
+    .contentkadiv{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      margin-top: 40px;
+    }
+    .usefullLinks h5{
+      color: white;
+      font-size: 24px;
+    }
+    .usefullLinks {
+      text-decoration: none;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+font-family: sans-serif;
+    }
+    .usefullLinks a{
+      text-decoration: none;
+      color: rgb(190, 190, 190);
+    }
+    .usefullLinks a:hover{
+      color: #ff5a3c;
+      transition: 0.3s;
+    }
+    .footernavbar{
+      display: flex;
+      justify-content: space-around;
+  
+    }
+    .footer{
+      width: 90%;
+      height: 150px;
+      border-radius: 15px;
+      background-color: #14194F;
+     margin-left: 50px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     gap: 40px;
+     border: 0.5px solid rgb(68, 68, 68);
+    }
+    .addressdiv{
+      width: 287px;
+    }
+    .phonediv{
+      display: flex;
+      gap: 20px;
+    }
+    .finalfooter{
+      width: 100%;
+      height: 50px;
+      background-color: #14194F;
+      display: flex;
+      justify-content:space-between;
+      align-items: center;
+
+    }
+    .copyright{
+      color: white;
+      margin-left: 40px;
+    }
+    .socialmediaicons{
+       margin-right: 50px;
+    }
+    .socialmediaicons i{
+      color: rgb(196, 196, 196);
+     
+    }
+    .socialmediaicons i:hover{
+      cursor: pointer;
+      color: #ff5a2c;
+      transition: 0.3s all;
+    }
